--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color:#f4f4f4;
+    background-color:#000000;
   }
   
   /******
@@ -12,15 +12,15 @@ body {
     left: 50%;
     transform: translate(-50%, 0);
     padding: 10px 0;
-    background-color: #5a44ff;
+    background-color: #ff0000;
     width: 100%;
     top: 0px;
   }
   
   .header h1 {
     color: white;
-    font-family: 'Satisfy', cursive;
-    font-size: 36px;
+    font-family: 'Audiowide', cursive;
+    font-size: 24px;
   }
   
   .header input[type=text] {
